# USB-Whisperer-FW

./: Cargo.toml  README.md
.cargo/: config.toml
fw/: Cargo.toml
fw/.cargo/: config.toml
fw/src/: cmd_handler.rs  fusb302.rs  logger.rs  main.rs  system_timer.rs  usb_fsm.rs  usb_pd_fsm.rs
fw/src/logger/: channel.rs
src/: fusb302.rs  main.rs  system_timer.rs  usb_fsm.rs
src/fusb302/: registers.rs
usb_whisperer/: Cargo.toml
usb_whisperer/src/: main.rs
usb_whisperer_lib/: Cargo.toml
usb_whisperer_lib/src/: lib.rs
